# video-autosplitter

./: .gitignore  LICENSE  README.md
src/autosplitter/: __init__.py  cli.py  export.py  ffmpeg_utils.py  models.py  splitter.py
src/autosplitter/detectors/: __init__.py  combined.py  scene.py
video-autosplitter/: pyproject.toml
video-autosplitter/src/autosplitter/: cli.py  models.py
video-autosplitter/src/autosplitter/detectors/: __init__.py  blackframe.py  interval.py  silence.py
video-autosplitter/tests/: test_core.py
